invoice part is working properly

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,23 @@
 credentials.json
 digi
 invoices
+.env
+*.log
+docker-compose.yml
+Docker*
+extracted*
+proc*
+Akaunting/api2.py
+Akaunting/*.pdf
+Akaunting/*.json
+Akaunting/data
+Akaunting/invoices
+Akaunting/receipts
+Akaunting/__pycache__
+__pycache__
+.dockerignore
+.DS_Store
+*.txt
+*.json
+*.prisma
+*.pickle
